use style for question number text - all question pages

--- a/app/src/main/res/layout/activity_main_h1.xml
+++ b/app/src/main/res/layout/activity_main_h1.xml
@@ -41,13 +41,8 @@
             android:padding="@dimen/padding_SM">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_1"
-                android:textAllCaps="true"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionNumTextViewStyle"
+                android:text="@string/question_1" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -132,13 +127,8 @@
             android:padding="@dimen/padding_SM">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_2"
-                android:textAllCaps="true"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionNumTextViewStyle"
+                android:text="@string/question_2" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -185,13 +175,8 @@
             android:padding="@dimen/padding_SM">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_3"
-                android:textAllCaps="true"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionNumTextViewStyle"
+                android:text="@string/question_3" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -274,13 +259,8 @@
             android:padding="@dimen/padding_SM">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_4"
-                android:textAllCaps="true"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionNumTextViewStyle"
+                android:text="@string/question_4" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -316,13 +296,8 @@
             android:padding="@dimen/padding_SM">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_5"
-                android:textAllCaps="true"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionNumTextViewStyle"
+                android:text="@string/question_5" />
 
             <TextView
                 android:layout_width="wrap_content"
