--- a/app/src/main/res/layout/activity_main_h2.xml
+++ b/app/src/main/res/layout/activity_main_h2.xml
@@ -43,13 +43,8 @@
             android:padding="@dimen/padding_SM">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_6"
-                android:textAllCaps="true"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionNumTextViewStyle"
+                android:text="@string/question_6" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -113,13 +108,8 @@
             android:padding="@dimen/padding_SM">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_7"
-                android:textAllCaps="true"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionNumTextViewStyle"
+                android:text="@string/question_7" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -144,7 +134,6 @@
                 android:maxLength="2"
                 android:padding="@dimen/text_M" />
 
-
         </LinearLayout>
 
         <LinearLayout
@@ -156,13 +145,8 @@
             android:padding="@dimen/padding_SM">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_8"
-                android:textAllCaps="true"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionNumTextViewStyle"
+                android:text="@string/question_8" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -236,13 +220,8 @@
             android:padding="@dimen/padding_SM">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_9"
-                android:textAllCaps="true"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionNumTextViewStyle"
+                android:text="@string/question_9" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -317,13 +296,8 @@
             android:padding="@dimen/padding_SM">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_10"
-                android:textAllCaps="true"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionNumTextViewStyle"
+                android:text="@string/question_10" />
 
             <TextView
                 android:layout_width="wrap_content"
